--- a/end2endmlpj/end2endmlpj.ipynb
+++ b/end2endmlpj/end2endmlpj.ipynb
@@ -10,9 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'datasets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m     housing_tgz\u001b[39m.\u001b[39mextractall(path \u001b[39m=\u001b[39m housing_path)\n\u001b[1;32m     18\u001b[0m     housing_tgz\u001b[39m.\u001b[39mclose()\n\u001b[0;32m---> 20\u001b[0m fetch_housing_data()\n",
+      "Cell \u001b[0;32mIn[17], line 11\u001b[0m, in \u001b[0;36mfetch_housing_data\u001b[0;34m(housing_url, housing_path)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch_housing_data\u001b[39m(housing_url \u001b[39m=\u001b[39m HOUSING_URL, housing_path \u001b[39m=\u001b[39m HOUSING_PATH):\n\u001b[1;32m     10\u001b[0m     \u001b[39m#ルートに./datasets/housingディレクトリを作る\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m     os\u001b[39m.\u001b[39;49mmakedirs(housing_path)\n\u001b[1;32m     12\u001b[0m     \u001b[39m#housing.tgzをダウンロード\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     tgz_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(housing_path, \u001b[39m\"\u001b[39m\u001b[39mhousing.tgz\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.4/lib/python3.10/os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[39mif\u001b[39;00m head \u001b[39mand\u001b[39;00m tail \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m path\u001b[39m.\u001b[39mexists(head):\n\u001b[1;32m    214\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 215\u001b[0m         makedirs(head, exist_ok\u001b[39m=\u001b[39;49mexist_ok)\n\u001b[1;32m    216\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mFileExistsError\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m         \u001b[39m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[1;32m    218\u001b[0m         \u001b[39mpass\u001b[39;00m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.4/lib/python3.10/os.py:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    224\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 225\u001b[0m     mkdir(name, mode)\n\u001b[1;32m    226\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[1;32m    227\u001b[0m     \u001b[39m# Cannot rely on checking for EEXIST, since the operating system\u001b[39;00m\n\u001b[1;32m    228\u001b[0m     \u001b[39m# could give priority to other errors like EACCES or EROFS\u001b[39;00m\n\u001b[1;32m    229\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m exist_ok \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m path\u001b[39m.\u001b[39misdir(name):\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'datasets'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tarfile\n",
@@ -23,8 +38,9 @@
     "HOUSING_URL = DOWNLOAD_ROOT + \"datasets/housing/housing.tgz\"\n",
     "\n",
     "def fetch_housing_data(housing_url = HOUSING_URL, housing_path = HOUSING_PATH):\n",
-    "    #ルートに./datasets/housingdディレクトリを作る\n",
-    "    os.makedirs(housing_path, exist_ok=True)\n",
+    "    #ルートに./datasets/housingディレクトリを作る\n",
+    "    if not os.path.isdir(housing_path):\n",
+    "        os.makedirs(housing_path)\n",
     "    #housing.tgzをダウンロード\n",
     "    tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
     "    urllib.request.urlretrieve(housing_url, tgz_path)\n",
@@ -44,15 +60,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "orig_nbformat": 4
