20230425 cnn-cuda update 20230425 end2endmlpj update

--- a/cnn/cnn.ipynb
+++ b/cnn/cnn.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "('3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]',\n",
-       " '2.8.0-rc1')"
+       " '2.10.0')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 8695063951224146747\n",
+      "xla_global_id: -1\n",
+      ", name: \"/device:GPU:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 2240439911\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 16747513465126489983\n",
+      "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1650, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
+      "xla_global_id: 416903419\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib;\n",
+    "print(device_lib.list_local_devices())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,33 +241,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "352/352 [==============================] - 55s 157ms/step - loss: 2.1806 - accuracy: 0.1803 - val_loss: 2.0954 - val_accuracy: 0.2402\n",
-      "Epoch 2/10\n",
-      "352/352 [==============================] - 56s 159ms/step - loss: 2.1177 - accuracy: 0.2096 - val_loss: 2.0319 - val_accuracy: 0.2568\n",
-      "Epoch 3/10\n",
-      "352/352 [==============================] - 56s 160ms/step - loss: 2.0653 - accuracy: 0.2342 - val_loss: 2.0648 - val_accuracy: 0.2520\n",
-      "Epoch 4/10\n",
-      "352/352 [==============================] - 57s 163ms/step - loss: 1.9994 - accuracy: 0.2619 - val_loss: 1.8719 - val_accuracy: 0.3358\n",
-      "Epoch 5/10\n",
-      "352/352 [==============================] - 58s 165ms/step - loss: 1.9468 - accuracy: 0.2820 - val_loss: 1.8361 - val_accuracy: 0.3500\n",
-      "Epoch 6/10\n",
-      "352/352 [==============================] - 61s 173ms/step - loss: 1.8905 - accuracy: 0.3017 - val_loss: 1.7259 - val_accuracy: 0.3762\n",
-      "Epoch 7/10\n",
-      "352/352 [==============================] - 59s 167ms/step - loss: 1.8409 - accuracy: 0.3222 - val_loss: 1.6915 - val_accuracy: 0.3956\n",
-      "Epoch 8/10\n",
-      "352/352 [==============================] - 60s 171ms/step - loss: 1.7989 - accuracy: 0.3412 - val_loss: 1.7003 - val_accuracy: 0.3906\n",
-      "Epoch 9/10\n",
-      "352/352 [==============================] - 59s 169ms/step - loss: 1.7521 - accuracy: 0.3582 - val_loss: 1.6182 - val_accuracy: 0.4274\n",
-      "Epoch 10/10\n",
-      "352/352 [==============================] - 59s 168ms/step - loss: 1.7169 - accuracy: 0.3710 - val_loss: 1.5683 - val_accuracy: 0.4450\n"
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m現在のセルまたは前のセルでコードを実行中に、カーネルがクラッシュしました。エラーの原因を特定するには、セル内のコードを確認してください。詳細については、<a href='https://aka.ms/vscodeJupyterKernelCrash'>こちら</a> をクリックしてください。さらなる詳細については、Jupyter [log] (command:jupyter.viewOutput) を参照してください。"
      ]
     }
    ],
@@ -305,16 +338,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 32, 32, 3)\n",
-      "[[0.02660369 0.0093701  0.14587139 0.2627639  0.07552864 0.30342853\n",
-      "  0.10374276 0.05163076 0.0126161  0.00844426]]\n"
+     "ename": "NameError",
+     "evalue": "name 'x_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mz:\\ryota\\program\\python\\cnn\\cnn.ipynb セル 11\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/ryota/program/python/cnn/cnn.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#モデルを使った予測\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/z%3A/ryota/program/python/cnn/cnn.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m x_test_tmp \u001b[39m=\u001b[39m x_test[:\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/ryota/program/python/cnn/cnn.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(x_test_tmp\u001b[39m.\u001b[39mshape)\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/ryota/program/python/cnn/cnn.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(x_test_tmp)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_test' is not defined"
      ]
     }
    ],
