20230426 end2endmlpj update

--- a/end2endmlpj/end2endmlpj.ipynb
+++ b/end2endmlpj/end2endmlpj.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "Name: income_cat, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "<AxesSubplot:xlabel='longitude', ylabel='latitude'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "<AxesSubplot:xlabel='longitude', ylabel='latitude'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e89f668940>"
+       "<matplotlib.legend.Legend at 0x191e9dfcf70>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "<AxesSubplot:xlabel='median_income', ylabel='median_house_value'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "SimpleImputer(strategy='median')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "       1164.     ,  408.     ,    3.54155])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "       1164.     ,  408.     ,    3.54155])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "4861        <1H OCEAN"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "       [0., 1., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
        "68627.87390018745"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,6 +1431,300 @@
     "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
     "lin_rmse = np.sqrt(lin_mse)\n",
     "lin_rmse"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "交差検証による評価"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "forest_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "#K分割交差検証でランダムフォレストモデルを１０回訓練、評価する。\n",
+    "scores = cross_val_score(forest_reg, housing_prepared, housing_labels, scoring=\"neg_mean_squared_error\", cv = 10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [51559.63379638 48737.57100062 47210.51269766 51875.21247297\n",
+      " 47577.50470123 51863.27467888 52746.34645573 50065.1762751\n",
+      " 48664.66818196 54055.90894609]\n",
+      "Mean: 50435.58092066179\n",
+      "Standard deviation: 2203.3381412764606\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_score(scores):\n",
+    "        print(\"Scores:\", scores)\n",
+    "        print(\"Mean:\", scores.mean())\n",
+    "        print(\"Standard deviation:\", scores.std())\n",
+    "\n",
+    "display_score(tree_rmse_scores)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "グリッドサーチ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             return_train_score=True, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    #n_estimators、max_featuresハイパーパラメータを3x4=12通りの組み合わせテで評価する。\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    #n_estimators、max_futuresハイパーパラメータを2x3=6通りの組み合わせで評価する。\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "  ]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "# 18通りの組み合わせを5回(計90回)訓練しベスト値を出す\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                           scoring='neg_mean_squared_error',\n",
+    "                           return_train_score=True)\n",
+    "grid_search.fit(housing_prepared, housing_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 8, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#最適な組み合わせを表示する\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=8, n_estimators=30, random_state=42)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63895.161577951665 {'max_features': 2, 'n_estimators': 3}\n",
+      "54916.32386349543 {'max_features': 2, 'n_estimators': 10}\n",
+      "52885.86715332332 {'max_features': 2, 'n_estimators': 30}\n",
+      "60075.3680329983 {'max_features': 4, 'n_estimators': 3}\n",
+      "52495.01284985185 {'max_features': 4, 'n_estimators': 10}\n",
+      "50187.24324926565 {'max_features': 4, 'n_estimators': 30}\n",
+      "58064.73529982314 {'max_features': 6, 'n_estimators': 3}\n",
+      "51519.32062366315 {'max_features': 6, 'n_estimators': 10}\n",
+      "49969.80441627874 {'max_features': 6, 'n_estimators': 30}\n",
+      "58895.824998155826 {'max_features': 8, 'n_estimators': 3}\n",
+      "52459.79624724529 {'max_features': 8, 'n_estimators': 10}\n",
+      "49898.98913455217 {'max_features': 8, 'n_estimators': 30}\n",
+      "62381.765106921855 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "54476.57050944266 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "59974.60028085155 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52754.5632813202 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "57831.136061214274 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51278.37877140253 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#スコアを表示する\n",
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ランダムサーチ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
+       "                   param_distributions={'max_features': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x0000019194C4B370>,\n",
+       "                                        'n_estimators': <scipy.stats._distn_infrastructure.rv_discrete_frozen object at 0x0000019194C48CD0>},\n",
+       "                   random_state=42, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "param_distribs = {\n",
+    "        'n_estimators': randint(low=1, high=200),\n",
+    "        'max_features': randint(low=1, high=8),\n",
+    "    }\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "rnd_search = RandomizedSearchCV(forest_reg, param_distributions=param_distribs,\n",
+    "                                n_iter=10, cv=5, scoring='neg_mean_squared_error', random_state=42)\n",
+    "rnd_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49117.55344336652 {'max_features': 7, 'n_estimators': 180}\n",
+      "51450.63202856348 {'max_features': 5, 'n_estimators': 15}\n",
+      "50692.53588182537 {'max_features': 3, 'n_estimators': 72}\n",
+      "50783.614493515 {'max_features': 5, 'n_estimators': 21}\n",
+      "49162.89877456354 {'max_features': 7, 'n_estimators': 122}\n",
+      "50655.798471042704 {'max_features': 3, 'n_estimators': 75}\n",
+      "50513.856319990606 {'max_features': 3, 'n_estimators': 88}\n",
+      "49521.17201976928 {'max_features': 5, 'n_estimators': 100}\n",
+      "50302.90440763418 {'max_features': 3, 'n_estimators': 150}\n",
+      "65167.02018649492 {'max_features': 5, 'n_estimators': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvres = rnd_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "テストセットで評価する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#グリッドサーチの最適解をモデルとする\n",
+    "final_model = grid_search.best_estimator_\n",
+    "#ラベルとデータに分離\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "#データを変換、予測\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "#予測結果を評価\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47873.26095812988"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#スコアを表示\n",
+    "final_rmse"
    ]
   }
  ],
