--- a/cnn/cnn.ipynb
+++ b/cnn/cnn.ipynb
@@ -56,6 +56,7 @@
     }
    ],
    "source": [
+    "#GPU使用確認\n",
     "from tensorflow.python.client import device_lib;\n",
     "print(device_lib.list_local_devices())"
    ]
